--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "main": "app.js",
   "author": "Amit Zaman",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/index.js"
+  },
   "dependencies": {
     "apollo-server": "^2.19.0",
     "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
